EREGCSC-1547 -- New Header (#734)
* chore: upgrade eslint-plugin-vue for 2.7 support

* feat: first pass at new vue header component and brand style

* feat: header component added to base django template for now

* feat: add header to all pages; refactor modal/flashbanner

* feat: header styles, breakpoints, tweaks

* feat: eregs design system specific vars, responsive styling

* feat: header search styling, scaffolding for future els

* feat: brand line break at narrower widths

* feat: mobile breakpoint flex styles for jump to

* refactor: move JumpTo and related api methods to eregs-vite

* chore: update jsDoc

* feat: jump to styling

* feat: basic non-mobile search input styles

* chore: JumpTo as slot in HeaderComponent

* feat: better mobile styles

* feat: header search as slot

* feat: slotify header in SPA views

* fear: add back in jump_to django template for now

* feat: add header block to each template where needed

This way we can pass in title and part in ToC/Reader View for specific Title and Part

* chore: slight file structure reorg for header els

* feat: crude HeaderLinks component on all pages

* feat: first pass at header links style

* feat: add homepage url from django for header brand

* feat: feed about/resources links from django into header component

* chore: clean up from merging main

* feat: show active styling for resources/about in wide header links

* feat: hook up search form action

* feat: responsive dropdown header links menu

* feat: basic mobile search input show/hide

* feat: move SVGs into their own template vue components

* feat: more svgs to vue components

* chore: minor style tweaks

* chore: minor a11y work

* chore remove vestigial header templates

* chore: move clickaway directive to its own file

* feat: add clickaway directive to header dropdown menu

* fix: use correct homepage url prop in SPA

* feat: restore homepage hero jump to lab

--- a/solution/backend/regulations/templates/regulations/base.html
+++ b/solution/backend/regulations/templates/regulations/base.html
@@ -52,13 +52,12 @@ CSS/Javascript etc., should inherit from this template.
                 {% include "../browser_not_supported.html" %}
 
                 {% block flash_banner %}
-                    <flash-banner></flash-banner>
+                    <div class="banner--container">
+                        <flash-banner></flash-banner>
+                    </div>
                 {% endblock %}
 
                 {% block header %}
-                    <header id="header" class="sticky">
-                        {% include "regulations/partials/header.html" %}
-                    </header>
                 {% endblock %}
 
                 {% block body %}{% endblock %}
