--- a/solution/backend/regulations/templates/regulations/search.html
+++ b/solution/backend/regulations/templates/regulations/search.html
@@ -23,6 +23,9 @@
     data-api-url="{{ API_BASE }}"
     data-about-url="{% url 'about' %}"
     data-custom-url="{{ CUSTOM_URL }}"
+    data-home-url="{% url 'homepage' %}"
+    data-resources-url="{% url 'resources' %}"
+    data-search-url="{% url 'search' %}"
     data-host="{{ host }}"
 ></div>
 {% endblock %}
