--- a/solution/backend/regulations/templates/regulations/homepage.html
+++ b/solution/backend/regulations/templates/regulations/homepage.html
@@ -12,7 +12,23 @@
 
 {% block header %}
     <header id="header" class="sticky">
-        {% include "regulations/partials/header.html" %}
+        <header-component
+            home-url="{% url 'homepage' %}"
+        >
+            <jump-to
+                slot="jump-to"
+                apiurl="{{ API_BASE }}"
+            ></jump-to>
+            <header-links
+                slot="links"
+                about-url="{% url 'about' %}"
+                resources-url="{% url 'resources' %}"
+            ></header-links>
+            <header-search
+                slot="search"
+                search-url="{% url 'search' %}"
+            ></header-search>
+        </header-component>
     </header>
 {% endblock %}
 
@@ -25,7 +41,7 @@
 
         <div class="hero-banner">
             <div class="site-container hero-content">
-                <jump-to class="jump-to" apiurl="{{ API_BASE }}"></jump-to>
+                <div class="call-to-action">Look up policy with context.</div>
                 <p class="hero-text">Explore this site as a supplement to existing policy tools. <a href="{% url 'about' %}#automated-updates">How this tool is updated.</a></p>
             </div>
         </div>
