fix: add homepage URL to jump to to remove base logic

--- a/solution/backend/regulations/templates/regulations/about.html
+++ b/solution/backend/regulations/templates/regulations/about.html
@@ -10,7 +10,8 @@
         >
             <jump-to
                 slot="jump-to"
-                apiurl="{{ API_BASE }}"
+                api-url="{{ API_BASE }}"
+                home-url="{% url 'homepage' %}"
             ></jump-to>
             <header-links
                 slot="links"
