--- a/solution/backend/regulations/templates/regulations/regulation_landing.html
+++ b/solution/backend/regulations/templates/regulations/regulation_landing.html
@@ -14,7 +14,8 @@
                 slot="jump-to"
                 part="{{ part }}"
                 title="{{ title }}"
-                apiurl="{{ API_BASE }}"
+                api-url="{{ API_BASE }}"
+                home-url="{% url 'homepage' %}"
             ></jump-to>
             <header-links
                 slot="links"
