--- a/solution/backend/regulations/templates/error_base.html
+++ b/solution/backend/regulations/templates/error_base.html
@@ -3,6 +3,29 @@
 
 {% block title %}Page Not Found | Medicaid & CHIP eRegulations {% endblock %}
 
+{% block header %}
+    <header id="header" class="sticky">
+        <header-component
+            home-url="{% url 'homepage' %}"
+        >
+            <jump-to
+                slot="jump-to"
+                api-url="{{ API_BASE }}"
+                home-url="{% url 'homepage' %}"
+            ></jump-to>
+            <header-links
+                slot="links"
+                about-url="{% url 'about' %}"
+                resources-url="{% url 'resources' %}"
+            ></header-links>
+            <header-search
+                slot="search"
+                search-url="{% url 'search' %}"
+            ></header-search>
+        </header-component>
+    </header>
+{% endblock %}
+
 {% block body %}
     <main class="error-page">
         <div class="error-left">
@@ -12,4 +35,9 @@
         </div>
         <img class="error-image" src="{% static 'images/browser.svg' %}" />
     </main>
+{% endblock %}
+
+{% block post_footer %}
+    <script src="https://cdn.jsdelivr.net/npm/vue@2.7.14"></script>
+    <script src="{% static '/js/eregs-main.iife.js' %}"></script>
 {% endblock %}
