test: add null alt attr to image for a11y

--- a/solution/backend/regulations/templates/error_base.html
+++ b/solution/backend/regulations/templates/error_base.html
@@ -33,7 +33,7 @@
             <h1 class="error-header">{% block error_header %}{% endblock %}</h1>
             {% block error_body %}{% endblock %}
         </div>
-        <img class="error-image" src="{% static 'images/browser.svg' %}" />
+        <img class="error-image" src="{% static 'images/browser.svg' %}" alt=""/>
     </main>
 {% endblock %}
 
