Update demo video link on about page

--- a/solution/backend/regulations/templates/regulations/about.html
+++ b/solution/backend/regulations/templates/regulations/about.html
@@ -43,12 +43,12 @@
             </p>
             <p>
                 <a
-                    href="https://www.youtube.com/watch?v=_6kqjEVHrZM"
+                    href="https://www.youtube.com/watch?v=dqy8WCFedU4"
                     class="external"
                     target="_blank"
                     rel="noopener noreferrer"
                 >
-                    View a 3-minute video demonstration.
+                    View a 6-minute video demonstration.
                 </a>
             </p>
         </section>
