--- a/solution/ui/regulations/css/scss/partials/_search.scss
+++ b/solution/ui/regulations/css/scss/partials/_search.scss
@@ -119,6 +119,10 @@
                             text-decoration: none;
                         }
                     }
+
+                    .related-sections-none {
+                        @include common-context-related-sections;
+                    }
                 }
             }
 
